base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dns
  labels:
    app.kubernetes.io/part-of: dns
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
