base/netpol-allow-cnpg-intracluster.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-intracluster
  namespace: dns
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: pdns-postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: pdns-postgres
      ports:
        - port: 5432
          protocol: TCP
        - port: 8000
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: pdns-postgres
      ports:
        - port: 5432
          protocol: TCP
        - port: 8000
          protocol: TCP
