base/netpol-allow-cnpg-operator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-operator-ingress
  namespace: dns
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: pdns-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - port: 8000
          protocol: TCP
